# spin

./: Cargo.toml
crates/core/src/: lib.rs  preview1.rs  wasi_2023_10_18.rs  wasi_2023_11_10.rs
crates/factor-key-value/src/: host.rs
crates/factor-llm/src/: host.rs
crates/factor-observe/: Cargo.toml
crates/factor-observe/src/: host.rs  lib.rs
crates/factor-otel/: Cargo.toml
crates/factor-otel/src/: host.rs  lib.rs
crates/factor-outbound-http/src/: spin.rs  wasi.rs
crates/factor-outbound-mqtt/src/: host.rs
crates/factor-outbound-mysql/src/: host.rs
crates/factor-outbound-pg/src/: host.rs
crates/factor-outbound-redis/src/: host.rs
crates/factor-sqlite/src/: host.rs
crates/factor-variables/src/: host.rs
crates/observe/: Cargo.toml
crates/observe/src/: future.rs  host_component.rs  lib.rs
crates/runtime-factors/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/tracing/: Cargo.toml
crates/tracing/src/: host_component.rs  lib.rs
crates/trigger/: Cargo.toml
crates/trigger-http/src/: handler.rs  wasi.rs
crates/trigger/src/: lib.rs
crates/world/src/: conversions.rs
tests/: integration.rs
tests/test-components/components/wasi-observe-tracing/: Cargo.toml
tests/test-components/components/wasi-observe-tracing/src/: lib.rs
tests/test-components/components/wasi-otel-tracing/: Cargo.toml
tests/test-components/components/wasi-otel-tracing/src/: lib.rs
wit/: tracing.wit  world.wit
