[package]
name = "wasi-otel-tracing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
http = "0.2"
opentelemetry = { path = "../../../../../opentelemetry-rust/opentelemetry" }
opentelemetry_sdk = { path = "../../../../../opentelemetry-rust/opentelemetry-sdk" }
opentelemetry-wasi = { path = "../../../../../opentelemetry-wasi/rust" }
spin-sdk = "3.1.0"
wit-bindgen = "0.30.0"
