[package]
name = "wasi-otel-tracing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
http = "0.2"
opentelemetry = "0.28"
opentelemetry_sdk = "0.28"
opentelemetry-wasi = { git = "https://github.com/asteurer/opentelemetry-wasi.git", branch = "rust", subdirectory = "rust" }
spin-sdk = "3.1.0"
wit-bindgen = "0.30.0"
